[package]
name = "pdf_air"
version = "0.1.0"
edition = "2024"

[dependencies]
pdf-extract = "0.6.2"
regex = "1.10.2"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dotenv = "0.15"
