[package]
name = "pdf_to_airtable"
version = "0.1.0"
edition = "2021"

[dependencies]
pdf-extract = "0.9.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
chrono = "0.4.41"
