[package]
name = "req_all"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mockito = "0.31"
